# lattice-crypto-evaluator

./: README.md  pyproject.toml  requirements.txt  setup.py
src/: api.py  decryption_failure_calculator.py  gui.py  main.py  parameter_set.py  size_calculator.py  styles.py  time_calculator.py  utils.py
src/failure/: LWE.py  LWR.py  MLWE_2n.py  MLWE_3n.py  MLWR.py  NTRU.py  RLWE_2n.py  RLWE_3n.py  RLWR.py  util.py
